--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -923,7 +923,7 @@
         <section th:if="${municipality == '45210000'}" id="drone" class="menu_fold">
             <ul class="tab">
                 <li data-value="event" class="active"><a>실시간</a></li>
-                <li data-value="station"><a>기체/개소</a></li>
+                <li data-value="facility"><a>기체/개소</a></li>
                 <li data-value="eventPast"><a>과거이력</a></li>
             </ul>
             <p class="lnb_fold"><i><img src="/images/default/foldOn.svg"></i></p>
@@ -957,7 +957,7 @@
                 </div>
             </div>
             <!-- lnb_tab_section * 기체/개소 -->
-            <div data-value="station" class="lnb_tab_section"> <!-- active 시, display: flex; -->
+            <div data-value="facility" class="lnb_tab_section"> <!-- active 시, display: flex; -->
                 <dl class="area_title">
                     <dt><i><img src="/images/default/titleIcon02.svg"></i>기체</dt>
                     <dd><span class="count">11</span></dd>
