--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -423,7 +423,7 @@
     </section>
     <!-- 시설물(드론) 이벤트 -->
     <section class="area_right" data-target="facility" data-value="event">
-        <h6>{드론 명}{이벤트 등급} {이벤트 종류} 발생 정보<i><img src="/images/default/close.svg"></i></h6>
+        <h6>{드론 명}{이벤트 등급} {이벤트 종류} 발생 정보<i class="area_right_closer"><img src="/images/default/close.svg"></i></h6>
         <div class="area_right_contents">
             <ul class="tab">
                 <li class="active" data-value="info"><a>기본 정보</a></li>
@@ -725,7 +725,7 @@
 
     <!-- 시설물 -->
     <section class="area_right" data-value="facility">
-        <h6>{드론 명} 기체 정보<i><img src="/images/default/close.svg"></i></h6>
+        <h6>{드론 명} 기체 정보<i class="area_right_closer"><img src="/images/default/close.svg"></i></h6>
         <div class="area_right_contents">
             <ul class="tab">
                 <li class="active" data-value="info"><a>기본 정보</a></li>
