--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navR.html
@@ -314,9 +314,9 @@
                     </dl>
                 </div>
                 <ul class="button">
-                    <li>투망 감시</li>
-                    <li>조치사항 입력/수정</li>
-                    <li>이벤트 종료</li>
+                    <li data-value="net">투망 감시</li>
+                    <li data-value="action">조치사항 입력/수정</li>
+                    <li data-value="eventEnd">이벤트 종료</li>
                 </ul>
             </div>
             <div class="area_right_scroll select">
@@ -519,9 +519,9 @@
                         </dl>
                     </div>
                     <ul class="button">
-                        <li>투망 감시</li>
-                        <li>조치 완료</li>
-                        <li>이벤트 종료</li>
+                        <li data-value="net">투망 감시</li>
+                        <li data-value="action">조치 완료</li>
+                        <li data-value="eventEnd">이벤트 종료</li>
                     </ul>
                 </div>
                 <dl class="area_title">
