탭별 리스트/ 패널 조작 수정 & 드론 test

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -78,7 +78,7 @@
                         </ul>
                     </div>
                 </div>
-                <dl class="area_title">
+                <dl class="area_title" data-value="station">
                     <dt><i><img src="/images/default/titleIcon02.svg"></i>Tab 1 목록<span class="count">0</span></dt>
                     <dd>
                         <!--                            <i></i>초기화-->
@@ -88,7 +88,7 @@
                         </select>
                     </dd>
                 </dl>
-                <div class="search_list">
+                <div class="search_list" data-value="station">
                     <!--<dl>
                         <dt>광명 전통시장</dt>
                         <dd>유형 : 정전</dd>
@@ -271,8 +271,8 @@
                         </ul>
                     </div>
                 </div>
-                <dl class="area_title">
-                    <dt><i><img src="/images/default/titleIcon02.svg"></i>Tab 1 목록<span class="count">11</span></dt>
+                <dl class="area_title" data-value="station">
+                    <dt><i><img src="/images/default/titleIcon02.svg"></i>Tab 1 목록<span class="count">0</span></dt>
                     <dd>
                         <!--                            <i></i>초기화-->
                         <select>
@@ -281,7 +281,7 @@
                         </select>
                     </dd>
                 </dl>
-                <div class="search_list">
+                <div class="search_list" data-value="station">
                     <!--<dl>
                         <dt>광명 전통시장</dt>
                         <dd>유형 : 정전</dd>
@@ -646,7 +646,7 @@
                         </ul>
                     </div>
                 </div>
-                <dl class="area_title">
+                <dl class="area_title" data-value="station">
                     <dt><i><img src="/images/default/titleIcon02.svg"></i>Tab 1 목록<span class="count">11</span></dt>
                     <dd>
                         <select>
@@ -655,7 +655,7 @@
                         </select>
                     </dd>
                 </dl>
-                <div class="search_list">
+                <div class="search_list" data-value="station">
                    <!--<dl>
                         <dt>광명 전통시장</dt>
                         <dd>유형 : 정전</dd>
@@ -958,11 +958,11 @@
             </div>
             <!-- lnb_tab_section * 기체/개소 -->
             <div data-value="facility" class="lnb_tab_section"> <!-- active 시, display: flex; -->
-                <dl class="area_title">
+                <dl class="area_title" data-value="facility">
                     <dt><i><img src="/images/default/titleIcon02.svg"></i>기체</dt>
-                    <dd><span class="count">11</span></dd>
+                    <dd><span class="count">0</span></dd>
                 </dl>
-                <div class="search_list">
+                <div class="search_list" data-value="facility">
                    <!--<dl>
                         <dt>DRONE ID<span class="state">비행 중</span></dt>
                         <dd>LTE 신호세기 : 양호</dd>
@@ -971,11 +971,11 @@
                     </dl>-->
                     <p class="button_top"><img src="/images/default/arrowNext.svg"></p>
                 </div>
-                <dl class="area_title">
+                <dl class="area_title" data-value="station">
                     <dt><i><img src="/images/default/titleIcon02.svg"></i>격납고</dt>
-                    <dd><span class="count">11</span></dd>
+                    <dd><span class="count">0</span></dd>
                 </dl>
-                <div class="search_list">
+                <div class="search_list" data-value="station">
                     <!--<dl>
                         <dt>광명소방서<span class="state">이상없음</span></dt>
                         <dd>LTE 신호세기 : 양호</dd>
