--- a/danusys-platform/src/main/resources/static/css/monitoring.css
+++ b/danusys-platform/src/main/resources/static/css/monitoring.css
@@ -240,9 +240,8 @@
 
 .area_video{margin: auto; padding: 10px; box-sizing: border-box; border-bottom: 2px solid #292c34;}
 .area_video div{width: 412px; height: 232px; background: pink;}
-.area_video_detection{width: 100%; display: grid; grid-template-columns: 1fr 1fr; grid-template-rows: 1fr 1fr; grid-gap: 10px;}
+.area_video_detection{width: 100%; display: grid; grid-template-columns: 1fr 1fr; grid-gap: 10px;}
 .area_video_detection div{width: auto;}
-.area_video_detection div:nth-child(1){grid-column: 1 / 3;}
 .area_video_drone{height: inherit;}
 .area_video_drone > div{position: relative;}
 .area_video .video_type{z-index: 10; position: absolute; top: 6px; right: 6px; display:flex; align-items:center; grid-gap:4px; width: fit-content; margin:0px 0px 10px 0px; padding:4px; background:#1e1f23; border-radius:6px;}
