--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -34,6 +34,9 @@
     <link rel="stylesheet" type="text/css" href="/css/plugin/apexCharts/apexcharts.css">
     <script type=text/javascript src="/js/plugin/apexCharts/apexcharts.min.js"></script>
 
+    <!-- echarts-->
+    <script type=text/javascript src="/js/plugin/eChart/echarts.min.js"></script>
+
     <!-- sweetAlert2-->
     <link rel="stylesheet" type="text/css" href="/webjars/sweetalert2/11.1.2/dist/sweetalert2.min.css"/>
     <script type=text/javascript src="/webjars/sweetalert2/11.1.2/dist/sweetalert2.min.js"></script>
@@ -59,5 +62,6 @@
     <script type="text/javascript" src="/js/pages/facility.js"></script>
     <script type="text/javascript" src="/js/pages/dimming.js"></script>
     <script type="text/javascript" src="/js/pages/faceDetection.js"></script>
+    <script type="text/javascript" src="/js/pages/stats.js"></script>
 </th:block>
 </html>
