--- a/danusys-platform/src/main/resources/templates/view/pages/statistics.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/statistics.html
@@ -34,21 +34,21 @@
                     <dl class="checkbox_set">
                         <dt>이벤트 등급</dt>
                         <dd>
-                            <span>
-								<input type="checkbox" id="urgent" name="">
+							<span>
+								<input type="checkbox" id="urgent" name="eventGrade" data-value="1" data-init-value="checked" checked>
 								<label for="urgent"><span></span>긴급</label>
-                            </span>
+							</span>
                             <span>
-								<input type="checkbox" id="caution" name="">
+								<input type="checkbox" id="caution" name="eventGrade" data-value="2" data-init-value="checked" checked>
 								<label for="caution"><span></span>주의</label>
-                            </span>
+							</span>
                         </dd>
                     </dl>
                     <dl class="date_set">
                         <dt>발생 기간</dt>
-                        <dd><input type="date" id="startDt" placeholder="날짜를 입력하세요" name="startDt" class="input_date"></dd>
+                        <dd><input type="text" id="startDt" placeholder="날짜를 입력하세요" name="startDt" class="input_date"></dd>
                         <span>부터</span>
-                        <dd><input type="date" id="endDt" placeholder="날짜를 입력하세요" name="endDt" class="input_date"></dd>
+                        <dd><input type="text" id="endDt" placeholder="날짜를 입력하세요" name="endDt" class="input_date"></dd>
                         <span>까지</span>
                     </dl>
                     <ul class="button">
